--- a/views/layout.slim
+++ b/views/layout.slim
@@ -6,6 +6,7 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1"
     link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"
     link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
+    link href="/assets/css/lib/nprogress.css" rel="stylesheet"
     link href="/assets/css/main.css" rel="stylesheet"
     /[if lt IE 9]
       script src="//html5shiv.googlecode.com/svn/trunk/html5.js"
@@ -22,4 +23,5 @@ html
     == yield
 
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"
+    script src="/assets/js/lib/nprogress.js"
     script src="/assets/js/main.js"
