disable submit button on form submit

--- a/views/index.slim
+++ b/views/index.slim
@@ -10,7 +10,7 @@
       .col-md-10
         input#js-query-field.form-control type="text" name="query" autocomplete="off"
       .col-md-2
-        button.btn.btn-primary type="submit" title="Execute command (Enter)"
+        button#js-run-btn.btn.btn-primary type="submit" title="Execute command (Enter)"
           span.fa.fa-lg.fa-caret-right
           '
           | Run
