--- a/views/index.slim
+++ b/views/index.slim
@@ -64,7 +64,7 @@
         kbd users --except=id,email,name
       p.text-muted
         ' More info can be found at
-        a href="http://narkoz.github.io/gitlab/cli" target="_blank" http://narkoz.github.io/gitlab/cli
+        a href="https://github.com/narkoz/gitlab-live#usage" target="_blank" https://github.com/narkoz/gitlab-live#usage
     .col-md-6
       hr
       h1 Notes
